# db-web

./: .gitignore  Cargo.toml
src/: errors.rs  lib.rs  main.rs
src/handlers/: client.rs  inventory.rs  mod.rs  order.rs  product.rs  repository.rs  user.rs
src/handlers/cop/: mod.rs  user_client.rs
src/middleware/: auth.rs
src/models/: client.rs  inventory.rs  mod.rs  order.rs  page.rs  product.rs  repository.rs  user.rs
src/routes/: router.rs
src/utils/: generation.rs  jwt.rs  mod.rs  page_query.rs  password.rs
